# biblioteca-back

./: manage.py  pyproject.toml  requirements.txt  wsgi.py
biblioteca-back/: app.py
biblioteca-back/templates/: index.html
bibliotecaback/: app.py
