[tool.poetry]
name = "biblioteca-back"
version = "0.1.0"
description = "Backend de uma bilbioteca de exemplo"
authors = ["Felipe Bastos Nunes <felipebastos@ifce.edu.br>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
dynaconf = "^3.1.7"
toml = "^0.10.2"
flaskstarter = "^0.4.5"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
